--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --prime: rgb(30, 52, 123);
+  --prime-dark: rgb(23, 37, 82);
+  --secondary: rgb(243, 67, 96);
+  --secondary-dark: rgb(190, 15, 29);
+  --time: 0.5s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family: 'montserrat', sans-serif;
+  box-sizing: border-box;
+  font-size: 62.5%;
+  list-style: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1 {
+  font-size: 1.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 1rem;
+  color: #fff;
+  background-color: var(--secondary);
+  padding: 1rem 3rem;
+  margin: 1rem auto;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all var(--time) ease;
+  border: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn:hover {
+  box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.3);
+  background-color: var(--secondary-dark);
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.btn-lg {
+  padding: 1rem 2rem;
+}
+
+.container {
+  width: 80%;
+  margin: 0 auto;
 }
